<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/coste_de_servicio"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/servicio_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coste_de_servicio" />

    <RadioGroup
        android:id="@+id/grupoRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/maravillosa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/servicio_pregunta">


        <RadioButton
            android:id="@+id/maravillosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_service">


        </RadioButton>

        <RadioButton
            android:id="@+id/buena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_service">

        </RadioButton>

        <RadioButton
            android:id="@+id/aceptable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_service">

        </RadioButton>


    </RadioGroup>

    <Switch
        android:id="@+id/redondear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/grupoRadio"
        app:layout_constraintTop_toBottomOf="@id/grupoRadio"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Button
        android:id="@+id/botonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redondear"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonCalcular" />


</androidx.constraintlayout.widget.ConstraintLayout>